WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
198789
Many layout tests are failing on iPad simulator due to unexpected viewport dimensions
https://bugs.webkit.org/show_bug.cgi?id=198789
Summary
Many layout tests are failing on iPad simulator due to unexpected viewport di...
Wenson Hsieh
Reported
2019-06-12 08:06:58 PDT
<
rdar://problem/51595519
>
Attachments
Patch
(1.52 KB, patch)
2019-06-12 08:27 PDT
,
Wenson Hsieh
no flags
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Wenson Hsieh
Comment 1
2019-06-12 08:27:03 PDT
Created
attachment 371957
[details]
Patch
WebKit Commit Bot
Comment 2
2019-06-12 09:45:44 PDT
Comment on
attachment 371957
[details]
Patch Clearing flags on attachment: 371957 Committed
r246357
: <
https://trac.webkit.org/changeset/246357
>
WebKit Commit Bot
Comment 3
2019-06-12 09:45:46 PDT
All reviewed patches have been landed. Closing bug.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug