Many layout tests are failing on iPad simulator due to unexpected viewport dimensions https://bugs.webkit.org/show_bug.cgi?id=198789 <rdar://problem/51595519>

Reviewed by Simon Fraser.

Prevent the shrink-to-fit-content timer from activating on layout tests that use the testing viewport
configuration.

* WebProcess/WebPage/ios/WebPageIOS.mm:
(WebKit::WebPage::immediatelyShrinkToFitContent):


Canonical link: https://commits.webkit.org/212770@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@246357 268f45cc-cd09-0410-ab3c-d52691b4dbfc